# zit

./: .gitignore  README.md  build_all.sh  build_and_install_zit.sh  event_model.py  install_zit.sh  install_zit_fm.sh  install_zit_git.sh  pyproject.toml  requirements.txt  run_zit.py  run_zit_fm.py  run_zit_git.py  run_zit_sys.py  setup.py  test_cli.sh  zit-aliases.sh
scripts/: build_all.sh  install.sh  install_dev.sh  install_zit.sh  install_zit_fm.sh  install_zit_sys.sh  install_zit_win.ps1  uv_build_all.sh
test/: README.md  zit_test.py
tests/: test_cli.py
zit/: __init__.py  calculate.py  cli.py  events.py  filemanager.py  filemanager_cli.py  git_cli.py  git_storage.py  linux_monitor.py  log_parser.py  print.py  storage.py  sys_cli.py  sys_events.py  terminal.py  time_utils.py  verify.py
zit-bash/: README.md  ted-to-zit  zit
zit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
zit/fm/: filemanager.py  filemanager_cli.py
zit/git/: git_cli.py  git_storage.py
zit/sys/: linux_monitor.py  log_parser.py  sys_cli.py  sys_events.py  sys_storage.py
