[project]
name = "zit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]
[project.scripts]
zit = "zit.cli:cli"
zit-fm = "zit.fm.filemanager_cli:fm"
zit-git = "zit.git.git_cli:git_cli"
zit-sys = "zit.sys.sys_cli:sys_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]