[project]
name = "zit"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basedpyright>=1.31.7",
    "click>=8.2.1",
    "mypy>=1.18.2",
    "pydantic>=2.11.7",
    "pyinstaller>=6.16.0",
    "pyright>=1.1.406",
    "pytest>=8.4.1",
    "ruff>=0.14.0",
]
[project.scripts]
zit = "zit.cli:cli"
zit-fm = "zit.fm.filemanager_cli:fm"
zit-git = "zit.git.git_cli:git_cli"
zit-sys = "zit.sys.sys_cli:sys_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
